test/type/wrong/div1.kk.out
test/type/wrong/div1.kk(1, 5): error: value definition is recursive.
 recursive group: [type/wrong/div1/recursive,type/wrong/div1/wrong]